--- a/index.html
+++ b/index.html
@@ -1,53 +1,86 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 		<title>Tim Berners</title>
 		<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 		<link type="text/css" rel="stylesheet" href="style.css" />
-		<body style="background-color:#a2b9bc;">
-	</head>
-	<body>
-		<div class="head">
-    <img src="images/1.jpg">
-		<h1>Tim Berners-Lee</h1>
-		<h3>Inventor of HTML</h3>
-		<p>Tim Bernes-Lee is the <b>inventor</b> of the web. In 1989, Tim was working
-			in a computing services section of CERN when he came up with the concept it
-			would be implemented on such an <b>enormous scale</b></p>
-		<a href="https://fr.wikipedia.org/wiki/Tim_Berners-Lee">See for yourself</a>
-	</div>
-	<br>
-	<div class="link">
-		<ul>
-			<li><i class="fab fa-facebook-f"></i><br><a href="https://www.facebook.com">Facebook</a></li>
-			<li><i class="fab fa-linkedin-in"></i><br><a href="https://www.linkedin.com">Linkedin</a></li>
-			<li><i class="fab fa-twitter"></i><br><a href="https://www.twitter.com">Tweeter</a></li></li>
-		</ul>
-	</div>
-	<br>
-	<div class="end">
-		<h3>His Favorite movies</h3>
+		<body style="background-color:#a2b9bc;"></head>
+		<body>
+			<div class="head">
+				<img src="images/1.jpg">
+				<h1>Tim Berners-Lee</h1>
+				<h3>Inventor of HTML</h3>
+				<p>
+					Tim Bernes-Lee is the
+					<b>inventor</b>
+					 of the web. In 1989, Tim was workingin a computing services section of CERN when he came up with the concept itwould be implemented on such an
+					<b>enormous scale</b>
+				</p>
+				<a href="https://fr.wikipedia.org/wiki/Tim_Berners-Lee">See for yourself</a>
+			</div>
+			<br>
+			<div class="link">
+				<ul>
+					<li>
+						<i class="fab fa-facebook-f"></i>
+						<br>
+						<a href="https://www.facebook.com">Facebook</a>
+					</li>
+					<li>
+						<i class="fab fa-linkedin-in"></i>
+						<br>
+						<a href="https://www.linkedin.com">Linkedin</a>
+					</li>
+					<li>
+						<i class="fab fa-twitter"></i>
+						<br>
+						<a href="https://www.twitter.com">Tweeter</a>
+					</li>
+				</li>
+			</ul>
+		</div>
 		<br>
-		<table>
-			<tr>
-				<th><img src="images/2.jpg"></th>
-				<th><h4>2001 - Space Odyssey</h4>
-				<p>Humanity finds a mysterious, obviously artificial, object buried beneath the lunar surface and, whith the intelligent computer H.A.L. 9000, sets off on a quest.</p></th>
-			</tr>
+		<div class="end">
+			<h3>His Favorite movies</h3>
 			<br>
-			<tr>
-				<th><img src="images/3.jpg"></th>
-				<th><h4>Monsieur Hulot</h4>
-				<p>Monsieur Hulot comes to a beachside hotel for a vacation, where he accidentally (but good-naturedly) case hovoc.</p></th>
-			</tr>
-			<br>
-			<tr>
-				<th><img src="images/4.jpg"></th>
-				<th><h4>Alien</h4>
-				<p>The commercial vessel Nostromo receives a distress call from an unexplored planet. After searching for survivors, the crew heads home only to realize that a deadly bioform has joined them</p></th>
-			</tr>
-		</table>
-	</div>
-		</body>
+			<table>
+				<tr>
+					<th>
+						<img src="images/2.jpg">
+					</th>
+					<th>
+						<h4>2001 - Space Odyssey</h4>
+						<p>
+							Humanity finds a mysterious, obviously artificial, object buried beneath the lunar surface and, whith the intelligent computer H.A.L. 9000, sets off on a quest.
+						</p>
+					</th>
+				</tr>
+				<br>
+				<tr>
+					<th>
+						<img src="images/3.jpg">
+					</th>
+					<th>
+						<h4>Monsieur Hulot</h4>
+						<p>
+							Monsieur Hulot comes to a beachside hotel for a vacation, where he accidentally (but good-naturedly) case hovoc.
+						</p>
+					</th>
+				</tr>
+				<br>
+				<tr>
+					<th>
+						<img src="images/4.jpg">
+					</th>
+					<th>
+						<h4>Alien</h4>
+						<p>
+							The commercial vessel Nostromo receives a distress call from an unexplored planet. After searching for survivors, the crew heads home only to realize that a deadly bioform has joined them
+						</p>
+					</th>
+				</tr>
+			</table>
+		</div>
+	</body>
 </html>
